--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ log = "0.3.6"
 byteorder = "1.0.0"
 env_logger = "0.4.2"
 time = "0.1.36"
+err-derive = "0.2.1"
 
 [dev-dependencies]
 lazy_static = "0.2.6"
